add question and comment init
添加一个话题功能基本完成，揭下来是评论模块，将原来对接数据库的模块改gorm 提高了效率

--- a/my-vue-app/package.json
+++ b/my-vue-app/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
-    "element-plus": "^2.3.5",
+    "element-plus": "^2.3.6",
     "unplugin-icons": "^0.16.1",
     "vue": "^3.2.47",
+    "vue-router": "4",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
