--- a/my-vue-app/package.json
+++ b/my-vue-app/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
     "element-plus": "^2.3.6",
+    "react": "^18.2.0",
     "unplugin-icons": "^0.16.1",
     "vue": "^3.2.47",
     "vue-router": "4",
