添加了登录的注册过程中，对密码和账号进行了加密 添加redis缓存，对于大量请求的数据做了缓存 增添了彩虹样式

--- a/my-vue-app/package.json
+++ b/my-vue-app/package.json
@@ -13,6 +13,7 @@
     "alova": "^2.6.0",
     "axios": "^1.4.0",
     "element-plus": "^2.3.6",
+    "jsencrypt": "^3.3.2",
     "react": "^18.2.0",
     "unplugin-icons": "^0.16.1",
     "vue": "^3.2.47",
